# rembrandt

./: .gitignore  README.md  pyproject.toml
.ai/: AGENTS.md
.ai/specs/: camera-poses-13-05.md
src/rembrandt/: __init__.py  camera_poses.py  errors.py  main.py  scene.py
tests/: test_camera_poses.py  test_smoke.py
