[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rembrandt"
version = "0.1.0"
description = "Synthetic computer vision datasets from 3D models"
readme = "README.md"
license = "MIT"
requires-python = "==3.11.*"
authors = [
    { name = "mantczak04", email = "mcantczak04@gmail.com" },
]
dependencies = [
    "bpy==4.5.*",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rembrandt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]